[package]
name = "todo"
version = "0.1.0"
authors = ["s-horii"]
edition = "2018"

[[bin]]
path = "./src/bin/main.rs"
name = "todo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
thiserror = "1.0.24"
asset = { git = "https://github.com/shorii/asset-rs", branch = "main" }
